Add homepage link for testing

--- a/range-rings-scrolly/package.json
+++ b/range-rings-scrolly/package.json
@@ -1,4 +1,4 @@
-{ "homepage": ".",
+{ "homepage": "https://feat-range-rings-scrolly--csis-amti-viz.netlify.app/static",
   "name": "range-rings-scrolly",
   "version": "0.1.0",
   "private": true,
