--- a/range-rings-scrolly/package.json
+++ b/range-rings-scrolly/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://feat-range-rings-scrolly--csis-amti-viz.netlify.app/static",
+{ "homepage": "https://feat-range-rings-scrolly--csis-amti-viz.netlify.app/*",
   "name": "range-rings-scrolly",
   "version": "0.1.0",
   "private": true,
