--- a/pacific-islands-scrolly/package.json
+++ b/pacific-islands-scrolly/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "d3-axis": "^1.0.12",
     "d3-ease": "^1.0.5",
+    "d3-fetch": "^3.0.1",
     "d3-format": "^1.3.2",
     "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
