--- a/pacific-islands-scrolly/package.json
+++ b/pacific-islands-scrolly/package.json
@@ -24,7 +24,6 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^7.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "papaparse": "5.2.0",
     "postcss-loader": "^2.1.5",
@@ -54,6 +53,7 @@
     "mapbox-gl": "^0.52.0-beta.1",
     "mapbox.js": "^3.1.1",
     "mapboxgl-spiderifier": "^1.0.9",
+    "sass": "^1.52.1",
     "scrollama": "^1.4.2",
     "slim-select": "^1.17.0",
     "stickyfilljs": "^2.1.0",
