--- a/east-china-sea-oil-rig-locations-map/package.json
+++ b/east-china-sea-oil-rig-locations-map/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
-    "parcel": "^2.7.0"
+    "parcel": "^2.7.0",
+    "prettier": "2.7.1"
   }
 }
